--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   "dependencies": {
     "chalk": "^2.3.0",
     "child-process-promise": "^2.2.1",
+    "cli-input": "^0.2.0",
+    "edgegrid": "^3.0.4",
     "ini": "^1.3.5",
     "inquirer": "^4.0.2",
     "merge": "^1.2.0",
