--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "ini": "^1.3.5",
     "inquirer": "^4.0.2",
     "merge": "^1.2.0",
+    "node-ask": "^1.0.1",
     "options": "0.0.6",
     "pkg": "^4.3.0-beta.5",
+    "prompt-promise": "^1.0.3",
     "request": "^2.74.0",
     "safe-buffer": "^5.1.1",
     "sywac": "^1.2.0",
