--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "akamaicliauth",
-  "version": "0.1.1",
+  "version": "0.0.3",
   "description": "A CLI for setting up edgegrid credentials",
   "repository": "https://github.com/akamai/cli-auth",
   "license": "Apache-2.0",
@@ -11,7 +11,7 @@
     "lint": "eslint --ignore-path .gitignore .",
     "start": "node bin/akamaiAuth",
     "pretest": "npm run lint",
-    "test": "mocha test --timeout 0",
+    "test": "snyk test && mocha test --timeout 0",
     "build": "node release.js"
   },
   "main": "./index.js",
@@ -20,24 +20,28 @@
     "src"
   ],
   "dependencies": {
+    "akamai-node-release": "^1.0.1",
     "chalk": "^2.3.0",
     "child-process-promise": "^2.2.1",
     "cli-input": "^0.2.0",
     "edgegrid": "^3.0.4",
     "ini": "^1.3.5",
-    "inquirer": "^4.0.2",
+    "inquirer": "^5.2.0",
     "merge": "^1.2.0",
     "node-ask": "^1.0.1",
     "options": "0.0.6",
-    "pkg": "^4.3.0-beta.5",
     "prompt-promise": "^1.0.3",
-    "request": "^2.74.0",
+    "request": "^2.85.0",
     "safe-buffer": "^5.1.1",
     "sywac": "^1.2.0",
     "untildify": "*"
   },
   "devDependencies": {
+    "chai": "^4.1.2",
+    "chai-as-promised": "^7.1.1",
     "eslint": "^4.19.1",
-    "eslint-config-loopback": "^10.0.0"
+    "eslint-config-loopback": "^10.0.0",
+    "mocha": "^5.1.1",
+    "snyk": "^1.80.0"
   }
 }
